<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Spesifikasi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:scaleType="centerCrop"
                tools:src="@color/colorAccent"/>
        </FrameLayout>
        <TextView
            style="@style/TextContent.Black"
            android:id="@+id/tv_item_name"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            tools:text="Nama hp"
            android:textSize="32sp"/>
        <TextView
            style="@style/TextContent.Black"
            android:id="@+id/tv_item_detail"
            android:layout_marginBottom="16dp"
            android:lineSpacingMultiplier="1"
            tools:text="Detail"
            android:textSize="24sp"/>
        <TextView
            style="@style/TextContent.Subtitle"
            android:text="@string/spesifikasi"
            android:layout_marginBottom="8dp"
            android:textSize="16sp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/display"
                    android:textSize="16sp"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:id="@+id/tv_item_display"
                    tools:text="Display"
                    android:textSize="16sp"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/size"
                    android:textSize="16sp"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:id="@+id/tv_item_size"
                    tools:text="Size"
                    android:textSize="16sp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/chipset"
                    android:textSize="16sp"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:id="@+id/tv_item_chipset"
                    tools:text="Chipset"
                    android:textSize="16sp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/ram"
                    android:textSize="16sp"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:id="@+id/tv_item_ram"
                    tools:text="RAM"
                    android:textSize="16sp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/fitur"
                    android:textSize="16sp"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:id="@+id/tv_item_fitur"
                    tools:text="Fitur"
                    android:textSize="16sp"/>
            </TableRow>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <TextView
                    style="@style/TextSpec.Field"
                    android:text="@string/battery"
                    android:textSize="16sp"/>
                <TextView
                    style="@style/TextSpec.Value"
                    android:id="@+id/tv_item_battery"
                    tools:text="Battery"
                    android:textSize="16sp"/>
            </TableRow>
        </TableLayout>


    </LinearLayout>

</ScrollView>